Colors and Typography

--- a/assets/src/sass/base/_colors.scss
+++ b/assets/src/sass/base/_colors.scss
@@ -1,7 +1,26 @@
 /* VARIABLES */
 
 // Colors
-$white:           rgba(255, 255, 255, 1);
+$white:           rgba(253, 253, 253, 1);
 $black:           rgba(45, 45, 45, 1);
 $gray:            rgba(150, 150, 150, 1);
 $red:             rgba(255, 0, 0, 1);
+
+// Text colours
+$san_juan:        rgba(56, 72, 108, 1);
+$san_juan_75:     rgba(56, 72, 108, 0.75);
+$elm:             rgba(31, 130, 117, 1);
+
+// Grayscale
+$alabaster:       rgba(248, 248, 248, 1);
+$mercury:         rgba(229, 229, 229, 1);
+$mid_gray:        rgba(102, 102, 114, 1);
+$mine_shaft:      rgba(56, 56, 56, 0.5);
+
+// Page colours
+$puerto_rico:     rgba(70, 192, 176, 1);
+$puerto_rico_75:  rgba(70, 192, 176, 0.75);
+$puerto_rico_25:  rgba(70, 192, 176, 0.25);
+$jordy_blue:      rgba(122, 177, 239, 1);
+$jordy_blue_75:   rgba(122, 177, 239, 0.75);
+$jordy_blue_25:   rgba(122, 177, 239, 0.25);
