--- a/assets/src/sass/base/_typography.scss
+++ b/assets/src/sass/base/_typography.scss
@@ -4,18 +4,15 @@
  * -
  */
 
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
 
 /* [1] */
 
 
 /* [2] */
-$font_primary: 'Open Sans', sans-serif;
+$font_primary: "museo-sans", sans-serif;
 
 /* [3] */
-$font_light: 300;
-$font_regular: 400;
-$font_semi_bold: 600;
+$font_regular: 500;
 $font_bold: 700;
 
 /* [4] */
@@ -35,8 +32,8 @@ html, button, input, select, textarea {
 
 /* [7] */
 p {
-  font-size: 1rem;
-  line-height: 1.5;
+  font-size: 1.1875rem;
+  line-height: 1.4375;
   margin-bottom: $base-margin;
 
   &:last-child {
@@ -48,29 +45,9 @@ p {
   }
 }
 
-.xl-copy {
-  font-weight: $font_light;
-  font-size: 1.3125rem;
-  line-height: 1.75rem;
-
-  strong {
-    font-weight: $font_bold;
-  }
-}
-
-.lg-copy {
-  font-weight: $font_light;
-  font-size: 1.125rem;
-  line-height: 1.625rem;
-
-  strong {
-    font-weight: $font_bold;
-  }
-}
-
 .sm-copy {
-  font-size: 0.9375rem;
-  line-height: 1.4375rem;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 
   strong {
     font-weight: $font_bold;
@@ -124,40 +101,23 @@ h1, h2, h3, h4 {
 }
 
 h1, .h1 {
-  font-size: 2.25rem;
-  line-height: 3.25rem;
+  font-size: 3rem;
+  line-height: 3.5625rem;
 }
 
 h2, .h2 {
-  font-size: 1.75rem;
-  line-height: 2.125rem;
-
-  &--light {
-    font-weight: $font_light;
-  }
+  font-size: 2.25rem;
+  line-height: 2.6875rem;
 }
 
 h3, .h3 {
-  font-size: 1.3125rem;
-  line-height: 1.75rem;
-
-  &--light {
-    font-weight: $font_light;
-  }
+  font-size: 1.6875rem;
+  line-height: 2rem;
 }
 
 h4, .h4 {
-  font-size: 1rem;
-  line-height: 2.125rem;
-}
-
-h5, .h5 {
-  font-size: 0.875rem;
-  line-height: 1.1875rem;
-
-  &--light {
-    font-weight: $font_light;
-  }
+  font-size: 1.5rem;
+  line-height: 1.8125rem;
 }
 
 /* [9] */
