Primary button styles closes #2

--- a/assets/src/sass/base/_colors.scss
+++ b/assets/src/sass/base/_colors.scss
@@ -9,6 +9,7 @@ $red:             rgba(255, 0, 0, 1);
 // Text colours
 $san_juan:        rgba(56, 72, 108, 1);
 $san_juan_75:     rgba(56, 72, 108, 0.75);
+$san_juan_25:     rgba(56, 72, 108, 0.25);
 $elm:             rgba(31, 130, 117, 1);
 
 // Grayscale
