--- a/templates/_components/button.html
+++ b/templates/_components/button.html
@@ -1,1 +1,2 @@
-<a href="#" class="btn" role="button"><span></span></a>
+<a href="#" class="btn" role="button">Search <i class="fa fa-search"></i></a>
+<a href="#" class="btn disabled" role="button">Search <i class="fa fa-search"></i></a>
