Secondary and small button styles closes #3

--- a/assets/src/sass/base/_colors.scss
+++ b/assets/src/sass/base/_colors.scss
@@ -25,3 +25,4 @@ $puerto_rico_25:  rgba(70, 192, 176, 0.25);
 $jordy_blue:      rgba(122, 177, 239, 1);
 $jordy_blue_75:   rgba(122, 177, 239, 0.75);
 $jordy_blue_25:   rgba(122, 177, 239, 0.25);
+$hawkes_blue:     rgba(222, 235, 251, 1);
