--- a/templates/_components/button.html
+++ b/templates/_components/button.html
@@ -1,2 +1,7 @@
 <a href="#" class="btn" role="button">Search <i class="fa fa-search"></i></a>
 <a href="#" class="btn disabled" role="button">Search <i class="fa fa-search"></i></a>
+<a href="#" class="btn btn--small" role="button">Search <i class="fa fa-search"></i></a>
+
+<a href="#" class="btn btn--secondary" role="button">Search <i class="fa fa-home"></i></a>
+<a href="#" class="btn btn--secondary disabled" role="button">Search <i class="fa fa-home"></i></a>
+<a href="#" class="btn btn--secondary btn--small" role="button">Search <i class="fa fa-home"></i></a>
