--- a/templates/_components/hero.html
+++ b/templates/_components/hero.html
@@ -4,7 +4,7 @@
     <div class="hero__content flex-col flex-col--6 flex-order--1 flex-order--mobile--2">
       <h1 class="hero__title">Welcome to Ayup's Development Boilerplate.</h1>
       <p class="hero__description">Built using CSS Flexbox and managed using Webpack.</p>
-      <a href="#" class="hero__cta btn btn--secondary modal-trigger" data-modal="main" role="button">Click Me!</a>
+      <a href="#" class="hero__cta btn btn--secondary btn--dark modal-trigger" data-modal="main" role="button">Click Me!</a>
     </div>
   </div>
 </section>
