--- a/templates/_components/button.html
+++ b/templates/_components/button.html
@@ -2,6 +2,6 @@
 <a href="#" class="btn disabled" role="button">Search <i class="fa fa-search"></i></a>
 <a href="#" class="btn btn--small" role="button">Search <i class="fa fa-search"></i></a>
 
-<a href="#" class="btn btn--secondary" role="button">Search <i class="fa fa-home"></i></a>
-<a href="#" class="btn btn--secondary disabled" role="button">Search <i class="fa fa-home"></i></a>
-<a href="#" class="btn btn--secondary btn--small" role="button">Search <i class="fa fa-home"></i></a>
+<a href="#" class="btn btn--secondary" role="button">Living at home <i class="fa fa-home"></i></a>
+<a href="#" class="btn btn--secondary disabled" role="button">Living at home <i class="fa fa-home"></i></a>
+<a href="#" class="btn btn--secondary btn--small" role="button">Living at home <i class="fa fa-home"></i></a>
