--- a/templates/_components/button.html
+++ b/templates/_components/button.html
@@ -5,3 +5,6 @@
 <a href="#" class="btn btn--secondary" role="button">Living at home <i class="fa fa-home"></i></a>
 <a href="#" class="btn btn--secondary disabled" role="button">Living at home <i class="fa fa-home"></i></a>
 <a href="#" class="btn btn--secondary btn--small" role="button">Living at home <i class="fa fa-home"></i></a>
+
+<a href="#" class="btn btn--toggle" role="button">Grid <i class="fa fa-th-large"></i></a>
+<a href="#" class="btn btn--toggle active" role="button">Map <i class="fa fa-map"></i></a>
