--- a/templates/_components/button.html
+++ b/templates/_components/button.html
@@ -8,3 +8,9 @@
 
 <a href="#" class="btn btn--toggle" role="button">Grid <i class="fa fa-th-large"></i></a>
 <a href="#" class="btn btn--toggle active" role="button">Map <i class="fa fa-map"></i></a>
+
+<a href="#" class="btn btn--small" role="button">Add to shortlist <i class="fa fa-star"></i></a>
+<a href="#" class="btn btn--small active" role="button">Add to shortlist <i class="fa fa-star"></i></a>
+
+<a href="#" class="btn btn--secondary btn--small btn--shortlist" role="button"><i class="fa fa-star"></i> View shortlist</a>
+<a href="#" class="btn btn--secondary btn--small btn--shortlist active" role="button"><i class="fa fa-star"></i> View shortlist</a>
