--- a/assets/src/sass/app.scss
+++ b/assets/src/sass/app.scss
@@ -22,6 +22,7 @@
 @import "components/card";
 @import "components/cta";
 @import "components/hero";
+@import "components/link";
 @import "components/media";
 @import "components/modal";
 @import "components/navigation";
