--- a/assets/src/sass/app.scss
+++ b/assets/src/sass/app.scss
@@ -26,6 +26,7 @@
 @import "components/media";
 @import "components/modal";
 @import "components/navigation";
+@import "components/service";
 @import "components/table";
 
 // FORMS
