--- a/assets/src/sass/base/_colors.scss
+++ b/assets/src/sass/base/_colors.scss
@@ -22,6 +22,8 @@ $mine_shaft:      rgba(56, 56, 56, 0.5);
 $puerto_rico:     rgba(70, 192, 176, 1);
 $puerto_rico_75:  rgba(70, 192, 176, 0.75);
 $puerto_rico_25:  rgba(70, 192, 176, 0.25);
+$jungle_green:    rgba(40, 161, 151, 1);
+$iceberg:         rgba(208, 239, 235, 1);
 $jordy_blue:      rgba(122, 177, 239, 1);
 $jordy_blue_75:   rgba(122, 177, 239, 0.75);
 $jordy_blue_25:   rgba(122, 177, 239, 0.25);
