--- a/assets/src/sass/components/_button.scss
+++ b/assets/src/sass/components/_button.scss
@@ -10,7 +10,6 @@
   border-radius: 10px;
   border: 4px solid $san_juan;
   padding: $base-margin - 4px $base-margin*1.5 - 4px;
-  margin-right: $base-margin*1.5;
   text-align: center;
   text-decoration: none;
   transition: 0.2s all ease-in-out;
@@ -31,6 +30,13 @@
   &:focus {
     box-shadow: none;
     border-color: $puerto_rico;
+  }
+
+
+  &--green {
+    background-color: $elm;
+    color: $white;
+    border-color: $elm;
   }
 
   // Reduced padding button style
