--- a/templates/_snippets/header.html
+++ b/templates/_snippets/header.html
@@ -1,6 +1,6 @@
 <header class="header">
-  <div class="flex-container flex-container--align-center">
-    <div class="flex-col flex-col--4">
+  <div class="flex-container flex-container--align-center flex-container--justify">
+    <div class="flex-col flex-col--6">
 
       <button type="button" class="nav-trigger mobile-show">
         <span class="bar"></span>
@@ -9,18 +9,18 @@
       </button>
 
       <figure class="logo">
-        <img src="https://ayup.agency/assets/dist/img/global/logo.svg" alt="Ayup Development Boilerplate" class="img-responsive"/>
+        <img src="/assets/dist/img/logo.png" alt="Connected Kingston" class="img-responsive"/>
       </figure>
     </div>
 
-    <div class="flex-col flex-col--8">
+    <div class="flex-col flex-col--6">
       <nav class="nav nav--primary mobile-hide" role="navigation">
-        <a href="#" class="nav__link" role="menuitem">Nav Link</a>
-        <a href="#" class="nav__link" role="menuitem">Nav Link</a>
-        <a href="#" class="nav__link" role="menuitem">Nav Link</a>
-        <a href="#" class="nav__link" role="menuitem">Nav Link</a>
+        <a href="#" class="nav__link" role="menuitem"><span>Search</span></a>
+        <a href="#" class="nav__link" role="menuitem"><span>About</span></a>
+        <a href="#" class="nav__link" role="menuitem"><span>Contact</span></a>
       </nav>
-      
+
+      <a href="#" class="btn btn--small btn--secondary btn--shortlist btn--icon-before"><i class="fa fa-star"></i> View shortlist</a>
     </div>
   </div>
 </header>
