--- a/assets/src/sass/app.scss
+++ b/assets/src/sass/app.scss
@@ -19,6 +19,7 @@
 // COMPONENTS
 @import "components/accordion";
 @import "components/button";
+@import "components/breadcrumbs";
 @import "components/card";
 @import "components/cta";
 @import "components/hero";
