--- a/templates/_snippets/header.html
+++ b/templates/_snippets/header.html
@@ -1,20 +1,27 @@
 <header class="header">
   <div class="flex-container flex-container--align-center flex-container--justify">
-    <div class="flex-col flex-col--6">
-
-      <button type="button" class="nav-trigger mobile-show">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </button>
-
+    <div class="flex-col flex-col--6 flex-col--tablet--12 header__brand">
       <figure class="logo">
         <img src="/assets/dist/img/logo.png" alt="Connected Kingston" class="img-responsive"/>
       </figure>
+
+      <button type="button" name="nav-trigger" class="nav-trigger tablet-show">
+        <label for="nav-trigger"></label>
+        <i class="bars fa fa-bars"></i>
+      </button>
     </div>
 
-    <div class="flex-col flex-col--6">
-      <nav class="nav nav--primary mobile-hide" role="navigation">
+    <div class="flex-col flex-col--6 flex-col--tablet--12 header__navigation tablet-hide">
+      <div id="google_translate_element"></div>
+
+      <script type="text/javascript">
+        function googleTranslateElementInit() {
+          new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+        }
+      </script>
+      <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+      <nav class="nav nav--primary" role="navigation">
         <a href="#" class="nav__link" role="menuitem"><span>Search</span></a>
         <a href="#" class="nav__link" role="menuitem"><span>About</span></a>
         <a href="#" class="nav__link" role="menuitem"><span>Contact</span></a>
