--- a/assets/src/sass/snippets/_header.scss
+++ b/assets/src/sass/snippets/_header.scss
@@ -63,7 +63,8 @@
   }
 
   .logo {
-    display: inline-block;
+    display: block;
+    float: left;
     max-width: 510px;
     height: auto;
 
@@ -72,7 +73,6 @@
     }
 
     @include breakpoint($break_mobile) {
-      float: left;
       max-width: 250px;
     }
 
