--- a/templates/_snippets/footer.html
+++ b/templates/_snippets/footer.html
@@ -1,15 +1,61 @@
 <footer class="footer">
   <div class="flex-container">
-    <div class="flex-col flex-col--6">
-      <nav class="nav nav--footer">
-        <a href="#" class="nav__link">Learn more</a>
-        <a href="#" class="nav__link">Link</a>
-        <a href="#" class="nav__link">Link</a>
-      </nav>
+    <div class="flex-col flex-col--6 flex-col--tablet--12">
+      <div class="flex-container">
+        <div class="flex-col flex-col--6 flex-col--mobile--6">  
+          <nav class="nav nav--footer" name="about-nav">
+            <label for="about-nav">About us</label>
+
+            <a href="#" class="nav__link">Lorem ipsum</a>
+            <a href="#" class="nav__link">Lorem ipsum</a>
+            <a href="#" class="nav__link">Lorem ipsum</a>
+          </nav>
+          
+          <nav class="nav nav--footer" name="about-nav">
+            <a href="#" class="nav__link">Terms and conditions</a>
+          </nav>
+        </div>
+  
+        <div class="flex-col flex-col--6 flex-col--mobile--6">  
+          <nav class="nav nav--footer" name="about-nav">
+            <label for="about-nav">Help</label>
+
+            <a href="#" class="nav__link">Lorem ipsum</a>
+            <a href="#" class="nav__link">Lorem ipsum</a>
+            <a href="#" class="nav__link">Lorem ipsum</a>
+          </nav>
+          
+          <nav class="nav nav--footer" name="about-nav">
+            <a href="#" class="nav__link">Terms and conditions</a>
+          </nav>
+        </div>
+      </div>
     </div>
 
-    <div class="flex-col flex-col--6 text-right text-left--mobile">
-      &copy; Ayup 2018
+    <div class="flex-col flex-col--6 flex-col--tablet--12">
+      <div class="flex-container">
+        <div class="flex-col flex-col--6 flex-col--mobile--6">
+          <nav class="nav nav--footer nav--social" name="social-nav">
+            <label for="social-nav">Get in touch</label>
+
+            <a href="#" class="nav__link"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="nav__link"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="nav__link"><i class="fab fa-instagram"></i></a>
+          </nav>
+        </div>
+
+        <div class="flex-col flex-col--6 flex-col--mobile--6">
+          <a href="#" class="btn btn--secondary btn--dark">Member area</a>
+        </div>
+
+        <div class="flex flex-col--12">
+          <div class="footer__sponsors">
+            <img src="https://picsum.photos/91/91" alt="">
+            <img src="https://picsum.photos/91/110" alt="">
+            <img src="https://picsum.photos/91/91" alt="">
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </footer>
