--- a/assets/src/sass/components/_navigation.scss
+++ b/assets/src/sass/components/_navigation.scss
@@ -77,15 +77,60 @@
   }
 
   &--footer {
-    float: left;
+    display: block;
+    margin-bottom: $base-margin*2.5;
+
+    @include breakpoint($break_mobile) {
+      margin-bottom: $base-margin*2;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+
+      @include breakpoint($break_tablet) {
+        margin-bottom: $base-margin*2.5;
+      }
+    }
+
+    label {
+      display: block;
+      font-size: 1.1875rem;
+      line-height: 1.4375rem;
+      font-weight: $font_bold;
+      margin-bottom: $base-margin*1.5;
+
+      @include breakpoint($break_mobile) {
+        font-size: 0.875rem;
+        line-height: 1.1875rem;
+        margin-bottom: $base-margin;
+      }
+    }
 
     .nav__link {
       display: block;
       color: $white;
-      margin: 0 0 $base-margin*0.5 0;
+      margin: 0 0 $base-margin*0.25 0;
+      line-height: 1.1875rem;
+
+      &:hover {
+        text-decoration: underline;
+      }
 
       &:last-child {
         margin: 0;
+      }
+    }
+  }
+
+  &--social {
+    .nav__link {
+      display: inline-block;
+      margin-right: $base-margin*1.5;
+      font-size: 1.1875rem;
+      line-height: 1.1875rem;
+
+      @include breakpoint($break_mobile) {
+        margin-right: $base-margin;
       }
     }
   }
