--- a/assets/src/sass/app.scss
+++ b/assets/src/sass/app.scss
@@ -29,6 +29,7 @@
 @import "components/navigation";
 @import "components/service";
 @import "components/table";
+@import "components/title-card";
 
 // FORMS
 @import "forms/base";
