--- a/assets/src/sass/base/_grid.scss
+++ b/assets/src/sass/base/_grid.scss
@@ -26,7 +26,7 @@ $break_mobile_small  : max-width 320px;
 
 // BODY STYLES
 body {
-  background-color: $white;
+  background-color: $alabaster;
   color: $black;
 
   &.noscroll {
