Added side module component closes #22

--- a/assets/src/sass/app.scss
+++ b/assets/src/sass/app.scss
@@ -28,6 +28,7 @@
 @import "components/modal";
 @import "components/navigation";
 @import "components/service";
+@import "components/side-module";
 @import "components/table";
 @import "components/title-card";
 
