--- a/assets/src/sass/base/_colors.scss
+++ b/assets/src/sass/base/_colors.scss
@@ -14,6 +14,7 @@ $elm:             rgba(31, 130, 117, 1);
 
 // Grayscale
 $alabaster:       rgba(248, 248, 248, 1);
+$wild_sand:       rgba(245, 245, 245, 1);
 $mercury:         rgba(229, 229, 229, 1);
 $mid_gray:        rgba(102, 102, 114, 1);
 $mine_shaft:      rgba(56, 56, 56, 0.5);
