--- a/assets/src/sass/components/_card.scss
+++ b/assets/src/sass/components/_card.scss
@@ -1,44 +1,37 @@
 /* CARD */
 
 .card {
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  background-color: $white;
-  box-sizing: border-box;
-  border: 1px solid $gray;
-  border-bottom-width: 4px;
-  border-radius: $border-radius;
-  overflow: hidden;
-
-  & > * {
-    flex: 1 1 380px;
+  &--grey {
+    background-color: $alabaster;
+    border-radius: 10px;
   }
 
-  &__image {
-    background-size: cover;
-    background-position: center;
-    min-height: 320px;
+  &--mint {
+    background-color: $iceberg;
+    border-radius: 10px;
   }
 
-  &__content {
-    padding: $base-margin*2;
-    box-sizing: border-box;
-
-    @include breakpoint($break_tablet) {
-      padding: $base-margin*1.5;
-    }
-
-    @include breakpoint($break_mobile) {
-      padding: $base-margin;
-    }
+  &--light-blue {
+    background-color: $hawkes_blue;
   }
 
-  &__title {
-    margin-bottom: $base-margin*2;
+  &--green {
+    background-color: $puerto_rico;
   }
 
-  &__cta {
-    margin-top: $base-margin*2;
+  &--dark-green {
+    background-color: $elm;
+  }
+
+  &--blue {
+    background-color: $san_juan;
+  }
+
+  &--border-blue {
+    border: 2px solid $blue_bayoux;
+  }
+
+  &--border-grey {
+    border: 2px solid $mid_gray;
   }
 }
