--- a/templates/_components/card.html
+++ b/templates/_components/card.html
@@ -1,12 +1,69 @@
-<div class="card">
-  <div class="card__image flex-col flex-col--6" style="background-image: url('https://unsplash.it/600/400')"></div>
+<div class="card card--grey card--location">
+  <div class="card__location flex-col flex-col--6">
+    <p class="card__location__name"><strong>New Malden Library</strong></p>
+    <p class="card__location__address">
+      Kingston Rd<br>
+      New Malden<br>
+      Surrey<br>
+      KT3 3LY
+    </p>
+    <p class="card__location__distance sm-copy">0.3 miles away</p>
+  </div>
 
-  <div class="card__content flex-col flex-col--6">
-    <h2 class="card__title">This is a card title</h2>
-    <div class="card__description">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquet dictum dolor scelerisque tempor. Vivamus fringilla ex in felis tempor, id semper lacus fermentum. Etiam in aliquet ligula.</p>
-      <p>Donec viverra mauris eu lorem imperdiet, ullamcorper fermentum ligula lobortis. Mauris quis nulla a lacus facilisis vulputate. Curabitur imperdiet quis neque eu gravida. Sed id massa lobortis, pretium lorem ac, lacinia magna.</p>
+  <div class="card__hours flex-col flex-col--6">
+    <div class="card__hours__times">
+      <table>
+        <tbody>
+          <tr>
+            <td class="sm-copy">Wednesday</td>
+          </tr>
+          <tr>
+            <td>10:30am-12pm</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-    <a href="#" class="card__cta btn btn--primary">Click Me</a>
+  </div>
+
+  <div class="card__services flex-col flex-col--12">
+    <img src="/assets/dist/img/access-icons/level-access-automatic-doors.png" alt="">
+    <img src="/assets/dist/img/access-icons/access-by-ramps-slopes-manual-doors.png" alt="">
+    <img src="/assets/dist/img/access-icons/mobility-impaired-walker.png" alt="">
   </div>
 </div>
+
+<div class="card card--grey card--location">
+  <div class="card__location flex-col flex-col--6">
+    <p class="card__location__name"><strong>New Malden Library</strong></p>
+    <p class="card__location__address">
+      Kingston Rd<br>
+      New Malden<br>
+      Surrey<br>
+      KT3 3LY
+    </p>
+    <p class="card__location__distance sm-copy">0.3 miles away</p>
+  </div>
+
+  <div class="card__hours flex-col flex-col--6">
+    <div class="card__hours__times card__hours__times--two-column">
+      <table>
+        <tbody>
+          <tr>
+            <td class="sm-copy">Wednesday</td>
+            <td>10:30am-12pm</td>
+          </tr>
+          <tr>
+            <td class="sm-copy">Thursday</td>
+            <td>10:30am-12pm</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <div class="card__services flex-col flex-col--12">
+    <img src="/assets/dist/img/access-icons/level-access-automatic-doors.png" alt="">
+    <img src="/assets/dist/img/access-icons/access-by-ramps-slopes-manual-doors.png" alt="">
+    <img src="/assets/dist/img/access-icons/mobility-impaired-walker.png" alt="">
+  </div>
+</div>  
