--- a/templates/_components/table.html
+++ b/templates/_components/table.html
@@ -1,17 +1,24 @@
-<table class="table">
-  <thead>
-    <th>Table Header</th>
-    <th>Table Header</th>
-    <th>Table Header</th>
-    <th>Table Header</th>
-  </thead>
-
+<table class="table table--who-for">
   <tbody>
     <tr>
-      <td>Table Cell</td>
-      <td>Table Cell</td>
-      <td>Table Cell</td>
-      <td>Table Cell</td>
+      <td><img src="/assets/dist/img/whos-this-for-icons/age-group.svg" alt="Age group"></td>
+      <td class="text-center">Age group</td>
+      <td class="sm-copy">All ages welcome</td>
+    </tr>
+    <tr>
+      <td><img src="/assets/dist/img/whos-this-for-icons/employment.svg" alt="Employment"></td>
+      <td class="text-center">Employment</td>
+      <td class="sm-copy">This is for anyone employed or unemployed seeking work.</td>
+    </tr>
+    <tr>
+      <td><img src="/assets/dist/img/whos-this-for-icons/age-group.svg" alt="Age group"></td>
+      <td class="text-center">Age group</td>
+      <td class="sm-copy">All ages welcome</td>
+    </tr>
+    <tr>
+      <td><img src="/assets/dist/img/whos-this-for-icons/employment.svg" alt="Employment"></td>
+      <td class="text-center">Employment</td>
+      <td class="sm-copy">This is for anyone employed or unemployed seeking work.</td>
     </tr>
   </tbody>
 </table>
