--- a/templates/_snippets/header.html
+++ b/templates/_snippets/header.html
@@ -2,7 +2,7 @@
   <div class="flex-container flex-container--align-center flex-container--justify">
     <div class="flex-col flex-col--6 flex-col--tablet--12 header__brand">
       <figure class="logo">
-        <img src="/assets/dist/img/logo.png" alt="Connected Kingston" class="img-responsive"/>
+        <img src="/assets/dist/img/global/logo.png" alt="Connected Kingston" class="img-responsive"/>
       </figure>
 
       <button type="button" name="nav-trigger" class="nav-trigger tablet-show">
