--- a/assets/src/sass/components/_navigation.scss
+++ b/assets/src/sass/components/_navigation.scss
@@ -23,7 +23,7 @@
 
     .nav__link {
       &:after {
-        content: url('../img/nav-hover.svg');
+        content: url('../img/global/nav-hover.svg');
         position: absolute;
         top: -13px;
         right: 0;
