--- a/assets/src/sass/components/_table.scss
+++ b/assets/src/sass/components/_table.scss
@@ -1,1 +1,32 @@
 /* TABLE */
+
+table,
+.table {
+    // Who this is for tables
+    &--who-for {
+        tbody {
+            tr {
+                &:nth-child(odd) {
+                    background-color: $alabaster;
+                }
+
+                &:last-child {
+                    border-bottom: 4px solid $alabaster;
+                }
+    
+                td {
+                    padding: $base-margin*1.5 $base-margin;
+                    vertical-align: middle;
+
+                    &:nth-child(1) {
+                        padding: $base-margin*1.5 $base-margin*3.5;
+                    }
+
+                    &:nth-child(2) {
+                        color: $san_juan;
+                    }
+                }
+            }
+        }
+    }
+}
