--- a/templates/_components/card.html
+++ b/templates/_components/card.html
@@ -66,4 +66,39 @@
     <img src="/assets/dist/img/access-icons/access-by-ramps-slopes-manual-doors.png" alt="">
     <img src="/assets/dist/img/access-icons/mobility-impaired-walker.png" alt="">
   </div>
-</div>  
+</div>
+
+<div class="card card--border-blue">
+  <h4 class="card__title">Useful information</h4>
+
+  <blockquote>
+    <p>Parking</p>
+    <p class="sm-copy">Parking available at the Hook Centre, no parking available at other sites</p>
+  </blockquote>
+
+  <blockquote>
+    <p>What to bring</p>
+    <p class="sm-copy">If you have a CV feel free to bring a copy with you.</p>
+  </blockquote>
+</div>
+
+<div class="card card--notification card--mint">
+  <div class="card__icon">
+    <i class="fa fa-pound-sign"></i>
+  </div>
+
+  <div class="card__content">
+    <p>Free</p>
+    <p class="sm-copy">This service cost no money.</p>
+  </div>
+</div>
+
+<div class="card card--notification card--light-blue">
+  <div class="card__icon">
+    <i class="fa fa-info-circle"></i>
+  </div>
+
+  <div class="card__content">
+    <p>‘Myself’ is anyone who is refering themselves or a friend.</p>
+  </div>
+</div>
