--- a/assets/src/sass/base/_typography.scss
+++ b/assets/src/sass/base/_typography.scss
@@ -185,3 +185,21 @@ main {
     }
   }
 }
+
+/* [14] */
+blockquote {
+  max-width: 370px;
+  color: $mid_gray;
+  border-left: 4px solid $puerto_rico;
+  margin: 0 0 $base-margin*1.5 $base-margin*1.5;
+  padding-left: $base-margin*1.5;
+  box-sizing: border-box;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  p {
+    margin-bottom: $base-margin*0.5;
+  }
+}
