Added sidebar component and more card components closes #16, closes #17 & closes #18

--- a/templates/_components/card.html
+++ b/templates/_components/card.html
@@ -102,3 +102,11 @@
     <p>‘Myself’ is anyone who is refering themselves or a friend.</p>
   </div>
 </div>
+
+<div class="card card--reduce-padding card--border-blue text-center">
+  <div class="card__content">
+    <img src="https://picsum.photos/245/125" alt="">
+    <p>Royal Borough of Kingston</p>
+    <p class="sm-copy"><a href="https://www.kingston.gov.uk/">https://www.kingston.gov.uk/</a></p>
+  </div>
+</div>
