--- a/templates/_components/sidebar.html
+++ b/templates/_components/sidebar.html
@@ -1,5 +1,5 @@
 <div class="sidebar">
-    <div class="sidebar__row">
+    <div class="sidebar__row sidebar__row--header">
         <p><strong>Contact</strong></p>
     </div>
     
@@ -18,10 +18,20 @@
         <p><a href="mailto:saskia@mindinkingston.org.uk">saskia@mindinkingston.org.uk</a></p>
     </div>
 
-    <div class="sidebar__row sidebar__row--social">
+    <div class="sidebar__row sidebar__row--social sidebar__row--footer">
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
         <a href="#"><i class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-youtube"></i></a>
+    </div>
+</div>
+
+<div class="sidebar sidebar--media">
+    <div class="sidebar__row sidebar__row--media">
+        <img src="https://picsum.photos/295/195" alt="">
+    </div>
+
+    <div class="sidebar__row sidebar__row--social sidebar__row--footer">
+        <a href="#" class="btn btn--secondary">Open Google Maps</a>
     </div>
 </div>
