--- a/assets/src/sass/components/_card.scss
+++ b/assets/src/sass/components/_card.scss
@@ -49,6 +49,11 @@
   }
 
   // Card types
+  &--reduce-padding {
+    padding: $base-margin*2 $base-margin*1.5;
+    box-sizing: border-box;
+  }
+
   &--notification {
     flex-wrap: nowrap;
     align-items: center;
