--- a/assets/src/sass/components/_sidebar.scss
+++ b/assets/src/sass/components/_sidebar.scss
@@ -15,9 +15,8 @@
             background-color: $white;
         }
 
-        &:first-child,
-        &:last-child {
-            padding: $base-margin*2 $base-margin*1.5;
+        .sidebar--media & {
+            background-color: $alabaster !important;
         }
 
         i {
@@ -33,6 +32,20 @@
 
         p {
             margin-bottom: $base-margin*0.25;
+        }
+
+        &--header,
+        &--footer {
+            padding: $base-margin*2 $base-margin*1.5;
+        }
+
+        &--media {
+            padding: 0;
+
+            img {
+                width: 100%;
+                height: auto;
+            }
         }
 
         &--social {
