--- a/templates/_forms/form.html
+++ b/templates/_forms/form.html
@@ -11,8 +11,14 @@
 
   <div class="field">
     <label for="input_name">Label text here</label>
+    <p class="field__description sm-copy">You have to be in the UK to use this service</p>
     <input type="text" class="input input--text" name="input_name" placeholder="Placeholder text here"/>
   </div>
+
+  <div class="field">
+      <label for="input_name">Label text here</label>
+      <input type="text" class="input input--text" name="input_name" placeholder="Placeholder text here" disabled/>
+    </div>
 
   <div class="field">
     <label for="input_name">Label text here</label>
@@ -44,6 +50,6 @@
   </div>
 
   <div class="actions">
-    <button type="submit" name="submit"><span>Submit</span></button>
+    <button type="submit" name="submit" class="btn"><span>Submit</span></button>
   </div>
 </form>
