--- a/assets/src/sass/forms/toggle.scss
+++ b/assets/src/sass/forms/toggle.scss
@@ -11,35 +11,29 @@
   }
 
   input[type="radio"]:checked + label {
-    color: $black;
+    color: $san_juan;
   }
 
   input[type="radio"] + label > span {
     display:inline-block;
-    width:20px;
-    height:20px;
-    margin:-2px $base-line-height*0.5 0 0;
+    width: 39px;
+    height: 39px;
+    margin: 0 $base-line-height*0.5 0 0;
     vertical-align:middle;
     cursor:pointer;
     -moz-border-radius:  50%;
     border-radius:  50%;
     background-color: transparent;
-    border: 2px solid $black;
-  }
-
-  input[type="radio"] + label:hover > span {
-    border-color: $black;
-  }
-
-  input[type="radio"]:checked + label > span {
-    border-color: $black;
+    border: 2px solid $san_juan;
+    padding: 2px;
+    box-sizing: border-box;
   }
 
   input[type="radio"] + label > span > span {
     display: block;
-    width:16px;
-    height:16px;
-    margin: 2px;
+    width: 27px;
+    height: 27px;
+    margin: 0;
     -moz-border-radius:  50%;
     border-radius:  50%;
     border: none;
@@ -47,16 +41,13 @@
   }
 
   input[type="radio"]:checked + label > span > span {
-    background-color: $black;
+    border: 4px solid $white;
+    background-color: $san_juan;
   }
 
-  input[type="radio"] + label span,
-  input[type="radio"] + label:hover > span,
-  input[type="radio"]:checked + label span {
-    -webkit-transition:background-color 0.4s linear;
-    -o-transition:background-color 0.4s linear;
-    -moz-transition:background-color 0.4s linear;
-    transition:background-color 0.4s linear;
+  input[type="radio"]:checked + label > span {
+    background-color: $san_juan;
+    border: 4px solid $puerto_rico;    
   }
 }
 
@@ -71,47 +62,36 @@
   }
 
   input[type="checkbox"]:checked + label {
-    color: $black;
+    display: inline-block;
+    color: $san_juan;
+    vertical-align: middle;
   }
 
   input[type="checkbox"] + label > span {
     display:inline-block;
-    width:20px;
-    height:20px;
-    margin:-2px $base-line-height*0.5 0 0;
+    width:35px;
+    height:35px;
+    margin: 0 $base-line-height*0.5 0 0;
     vertical-align:middle;
     cursor:pointer;
     background-color: transparent;
-    border: 2px solid $black;
+    border: 2px solid $san_juan;
   }
 
-  input[type="checkbox"] + label:hover > span {
-    border-color: $black;
+  input[type="checkbox"] + label > span > span:before {
+    display: none;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 400;
+    content: "\f00c";
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+    color: $san_juan;
+    margin: 4px;
   }
 
-  input[type="checkbox"]:checked + label > span {
-    border-color: $black;
-  }
-
-  input[type="checkbox"] + label > span > span {
+  input[type="checkbox"] + label span:before,
+  input[type="checkbox"] + label:hover > span:before,
+  input[type="checkbox"]:checked + label span:before {
     display: block;
-    width:16px;
-    height:16px;
-    margin: 2px;
-    border: none;
-    background-color: transparent;
-  }
-
-  input[type="checkbox"]:checked + label > span > span {
-    background-color: $black;
-  }
-
-  input[type="checkbox"] + label span,
-  input[type="checkbox"] + label:hover > span,
-  input[type="checkbox"]:checked + label span {
-    -webkit-transition:background-color 0.4s linear;
-    -o-transition:background-color 0.4s linear;
-    -moz-transition:background-color 0.4s linear;
-    transition:background-color 0.4s linear;
   }
 }
