Updated form components

--- a/templates/_forms/form.html
+++ b/templates/_forms/form.html
@@ -1,6 +1,6 @@
 <form class="form" action="" method="post">
   <div class="field field--select">
-    <select class="select" style="width: 100%">
+    <select class="select">
       <option>Option</option>
       <option>Option</option>
       <option>Option</option>
