Added map component closes #25

--- a/assets/src/sass/app.scss
+++ b/assets/src/sass/app.scss
@@ -24,6 +24,7 @@
 @import "components/cta";
 @import "components/hero";
 @import "components/link";
+@import "components/map";
 @import "components/media";
 @import "components/modal";
 @import "components/navigation";
