Removed accordion and modal components as they're not needed/Updated map styling

--- a/templates/_snippets/footer.html
+++ b/templates/_snippets/footer.html
@@ -44,7 +44,7 @@
           </nav>
         </div>
 
-        <div class="flex-col flex-col--6 flex-col--mobile--6">
+        <div class="flex-col flex-col--6 flex-col--mobile--6 text-right">
           <a href="#" class="btn btn--secondary btn--dark">Member area</a>
         </div>
 
