--- a/assets/src/sass/components/_map.scss
+++ b/assets/src/sass/components/_map.scss
@@ -3,6 +3,7 @@
 .map {
     position: relative;
     width: 960px;
+    max-width: 100%;
     height: 500px;
     border-radius: 25px;
     overflow: hidden;
