Added basic select list styling closes #9

--- a/assets/src/sass/forms/base.scss
+++ b/assets/src/sass/forms/base.scss
@@ -8,6 +8,7 @@ form,
   .field {
     position: relative;
     display: table;
+    width: 100%;
     margin-bottom: $base-margin*2.5;
     overflow: hidden;
 
