Added Vue.js closes #30

--- a/templates/_snippets/header.html
+++ b/templates/_snippets/header.html
@@ -22,9 +22,9 @@
       <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
       <nav class="nav nav--primary" role="navigation">
-        <a href="#" class="nav__link" role="menuitem"><span>Search</span></a>
-        <a href="#" class="nav__link" role="menuitem"><span>About</span></a>
-        <a href="#" class="nav__link" role="menuitem"><span>Contact</span></a>
+        <router-link to="search" class="nav__link" role="menuitem">Search</router-link>
+        <router-link to="search" class="nav__link" role="menuitem">About</router-link>
+        <router-link to="search" class="nav__link" role="menuitem">Contact</router-link>
       </nav>
 
       <a href="#" class="btn btn--small btn--secondary btn--shortlist btn--icon-before"><i class="fa fa-star"></i> View shortlist</a>
