--- a/assets/src/sass/components/_navigation.scss
+++ b/assets/src/sass/components/_navigation.scss
@@ -14,6 +14,9 @@
   }
 
   &--primary {
+    position: relative;
+    z-index: 1;
+    
     @include breakpoint($break_tablet) {
       float: none;
       display: block;
@@ -34,10 +37,11 @@
         opacity: 0;
         transition: opacity 0.2s ease-out;
         will-change: opacity;
-        z-index: 0;
+        z-index: -1;
       }
   
-      &:hover {
+      &:hover,
+      &.active {
         &:after {
           opacity: 1;
         }
