--- a/templates/_snippets/header.html
+++ b/templates/_snippets/header.html
@@ -2,7 +2,7 @@
   <div class="flex-container flex-container--align-center flex-container--justify">
     <div class="flex-col flex-col--6 flex-col--tablet--12 header__brand">
       <figure class="logo">
-        <img src="/assets/dist/img/global/logo.png" alt="Connected Kingston" class="img-responsive"/>
+        <a href="/"><img src="/assets/dist/img/global/logo.png" alt="Connected Kingston" class="img-responsive"/></a>
       </figure>
 
       <button type="button" name="nav-trigger" class="nav-trigger tablet-show">
@@ -22,9 +22,9 @@
       <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
       <nav class="nav nav--primary" role="navigation">
-        <router-link to="search" class="nav__link" role="menuitem">Search</router-link>
-        <router-link to="search" class="nav__link" role="menuitem">About</router-link>
-        <router-link to="search" class="nav__link" role="menuitem">Contact</router-link>
+        <a href="/" active-class="active" class="nav__link" role="menuitem">Search</a>
+        <a href="about" active-class="active" class="nav__link" role="menuitem">About</a>
+        <a href="contact" active-class="active" class="nav__link" role="menuitem">Contact</a>
       </nav>
 
       <a href="#" class="btn btn--small btn--secondary btn--shortlist btn--icon-before"><i class="fa fa-star"></i> View shortlist</a>
